# GenDB

./: .gitignore  LICENSE  README.md  package.json  run_benchmarks.sh
.claude/skills/aggregation-optimization/: SKILL.md
.claude/skills/data-loading/: SKILL.md
.claude/skills/data-structures/: SKILL.md
.claude/skills/experience/: SKILL.md
.claude/skills/gendb-code-patterns/: SKILL.md
.claude/skills/gendb-storage-format/: SKILL.md
.claude/skills/hash-tables/: SKILL.md
.claude/skills/indexing/: SKILL.md
.claude/skills/join-optimization/: SKILL.md
.claude/skills/parallelism/: SKILL.md
.claude/skills/research-papers/: SKILL.md
benchmarks/: benchmark.py  compare_gendb_versions.py  compare_languages.py  compare_models.py  setup_drop_caches.sh
benchmarks/lib/: config.py  gendb.py  indexes.py  main_runner.py  plotting.py  runners.py  systems.py  utils.py
benchmarks/sec-edgar/: MONETDB_ISSUE.md  benchmark.py  upgrade_monetdb.sh  workload.py
benchmarks/tpc-h/: SETUP_SUMMARY.md  benchmark.py  benchmark_results.json  benchmark_temp.py  build_indexes.py  convert_to_parquet.py  generate_ground_truth.py  queries.sql  schema.sql  setup_data.sh  setup_postgresql_latest.sh  workload.py
docs/: index.html
output/sec-edgar/: latest
output/tpc-h/: latest
output/tpc-h/language-comparison/rust_impl/: Cargo.toml
output/tpc-h/language-comparison/rust_impl/src/: common.rs  q1.rs  q18.rs  q3.rs  q6.rs  q9.rs
scripts/: model_comparison.sh  run_benchmarks.sh  setup.sh
src/gendb/: config.mjs  gendb.config.mjs  orchestrator.mjs  shared.mjs  single.mjs
(+8435 files in other folders)
